--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
-    "ownerNumber": "6285158549166@s.whatsapp.net",
+    "ownerNumber": "6288298895431@s.whatsapp.net",
     "ownerName": "aqulzz",
     "limitCount": 30,
     "gamewaktu": 60,
-    "botName": "Xinz Bot",
+    "botName": "Kagetstore Bot",
     "pathImg": "./media/Itsuki.jpg",
     "lolkey": "YOUR_APIKEY",
     "sesidInsta": "default",
